# candidate-assessment

./: Dockerfile  README-report.md  docker-compose.yml  pyproject.toml
project/: config.py
project/api/: main.py
project/api/responses/: word_cloud.py
project/api/routes/: auth.py  word_cloud.py
project/libs/twitter_client/: tweet.py  twitter_client.py  twitter_client_config.py
project/services/word_cloud_service/: service.py  word_cloud.py
test/api/: test_main.py  test_word_cloud.py
test/services/: test_word_cloud_service.py
