[tool.poetry]
name = "twitter-wordcloud"
version = "0.1"
description = "Twitter Word Count"
authors = ["Tales Pádua <tales_padua@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
mypy = "^0.782"
python-jose = "^3.2.0"
dynaconf = "^3.1.2"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.782"
pytest = "^6.0.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
